test/equality/negative/comp_wrong_order.mli
type 'a t

val f : 'a t -> 'a t -> ('a -> 'a -> int) -> int
(*@ comparison *)
